--- a/JENKINSFILE
+++ b/JENKINSFILE
@@ -19,9 +19,12 @@ image 'node:18-alpine' // since you're building/testing Node.js
     stages {
         stage('Checkout') {
             steps {
-                git url: https://github.com/WhereareyouRAJ/Build-A-CI-CD-Pipeline.git            , branch: 'main'
+               checkout([
+                 $class: 'GitSCM',
+                 branches: [[name: '*/main']],
+                 userRemoteConfigs: [[url: 'https://github.com/WhereareyouRAJ/Build-A-CI-CD-Pipeline.git']]
+])
 
-            git url: 'https://github.com/WhereareyouRAJ/Build-A-CI-CD-Pipeline.git', branch: 'main'
         }
             steps {
                 sh '''
